<resources>
    <string name="app_name">Mis Vacunas</string>

    <!--region Splash-->
    <string name="splash_title">SPLASH</string>
    <!--endregion-->

    <!--region User List, Editing and Detail-->
    <string name="user_list_empty_message">No hay usuarios en la base de datos</string>
    <string name="user_list_error_get_db">Ha ocurrido un error: %1$s</string>
    <string name="user_list_item_birthdate_format">dd \'de\' MMMM \'de\' yyyy</string>
    <string name="user_list_item_blood_type">Grupo sanguíneo:</string>

    <string name="user_editing_name_hint">Nombre</string>
    <string name="user_editing_birthdate_hint">Fecha de nacimiento</string>
    <string name="user_editing_bloodtype_prompt">Elige tu grupo sanguíneo:</string>
    <string-array name="user_bloodtype_array">
        <item> </item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>0+</item>
        <item>0-</item>
    </string-array>
    <string name="user_editing_region_prompt">Elige tu Comunidad</string>
    <string-array name="user_region_array">
        <item> </item>
        <item>Andalucía</item>
        <item>Aragón</item>
        <item>Asturias</item>
        <item>Cantabria</item>
        <!-- TODO -->
    </string-array>
    <string name="user_editing_cancel_option">Cancelar</string>
    <string name="user_editing_ok_option">Aceptar</string>
    <string name="user_editing_error_username_empty">El nombre del usuario no puede estar en blanco</string>
    <string name="user_editing_error_birthdate_empty">La fecha de nacimiento no puede estar en blanco</string>
    <string name="user_editing_error_insert_db">Ha ocurrido un error: %1$s</string>

    <string name="user_detail_birthdate_format">@string/user_list_item_birthdate_format</string>
    <string name="user_detail_blood_type">@string/user_list_item_blood_type</string>
    <string name="user_detail_region">Comunidad:</string>
    <string name="user_detail_vaccines">Vacunas:</string>
    <string name="user_detail_error_db">Ha ocurrido un error: %1$s</string>
    <!--endregion-->


    <!--region Only for developers -->
    <string name="test">Interpolación = %1$s %2$s</string>
    <string name="test_large">Lorem ipsum dolor sit amet consectetur adipiscing elit et ornare, quam urna tristique bibendum auctor nibh leo suspendisse, nisl eu pharetra vehicula placerat mattis dignissim nam. Felis mus convallis cum tincidunt suscipit nascetur ornare facilisi id fusce lacinia, accumsan quam varius vel auctor rutrum litora fringilla himenaeos tempor dui, et natoque urna lacus pellentesque libero nec morbi orci condimentum. Ut dis a nisl senectus molestie cursus etiam fringilla, quis semper primis nulla condimentum orci mattis dapibus proin, sodales placerat cum ultrices nascetur at vivamus.Sollicitudin dis egestas cras vestibulum augue pulvinar ornare tristique sociis id, sapien tincidunt vitae leo parturient luctus velit maecenas quisque, neque tortor viverra inceptos natoque habitasse morbi cubilia dictum. Consequat phasellus vel quam ornare magnis et sociis imperdiet praesent, pellentesque vestibulum vehicula laoreet magna nostra fusce cursus, purus inceptos montes etiam molestie vitae mattis turpis. Accumsan tortor porttitor cras dis nam molestie aptent rhoncus, viverra faucibus bibendum mattis pretium taciti massa libero, inceptos urna sem nostra sociis phasellus lobortis.</string>
    <!--endregion-->
</resources>
